--- a/app/views/projects/order/show.html.erb
+++ b/app/views/projects/order/show.html.erb
@@ -45,8 +45,9 @@
                   </tbody>
                 </table>
               </div>
+            </div>
+          </div>
 
-        
       <!-- Если пользователь - клиент -->
       <% if current_user.role == "client" %>
         <%= render "projects/order/client" %>
